--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!--Headings-->
     <!-- <h1>Hola Mundo!</h1> -->
-    <h1>This is the Crypto-Kermesse!!!</h1>
+    <h1>This is the Crypto-Kermesse!</h1>
 
     <h4>The funniest crypto games on the entire Web3!</h4>
     
