--- a/3-in-a-row.html
+++ b/3-in-a-row.html
@@ -20,7 +20,7 @@
     <br><br><br>
 
     <div>
-      <p>Make your bet</p>
+      <p>Make your bet!</p>
         <!--<span><p><a href="/3-in-a-row.html">3-in-a-row</a></span>-->
       </p>
     </div>
